--- a/mp2/mp2.qsf
+++ b/mp2/mp2.qsf
@@ -53,9 +53,6 @@ set_global_assignment -name NOMINAL_CORE_SUPPLY_VOLTAGE 1.1V
 set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (SystemVerilog)"
 set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "SYSTEMVERILOG HDL" -section_id eda_simulation
 
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name EDA_TIME_SCALE "1 ps" -section_id eda_simulation
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
 set_global_assignment -name EDA_NATIVELINK_SIMULATION_TEST_BENCH mp2_tb -section_id eda_simulation
@@ -63,15 +60,24 @@ set_global_assignment -name EDA_TEST_BENCH_NAME mp2_tb -section_id eda_simulatio
 set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id mp2_tb
 set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "200 ns" -section_id mp2_tb
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME mp2_tb -section_id mp2_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE mp2_tb.sv -section_id mp2_tb
+set_global_assignment -name EDA_TEST_BENCH_FILE physical_memory.sv -section_id mp2_tb
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE cache_datapath.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cache_control.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cache.sv
+set_global_assignment -name SYSTEMVERILOG_FILE mp2.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cpu_datapath.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cpu_control.sv
+set_global_assignment -name SYSTEMVERILOG_FILE cpu.sv
 set_global_assignment -name SDC_FILE mp2.sdc
 set_global_assignment -name SYSTEMVERILOG_FILE lc3b_types.sv
 set_global_assignment -name SYSTEMVERILOG_FILE adj.sv
 set_global_assignment -name SYSTEMVERILOG_FILE alu.sv
-set_global_assignment -name SYSTEMVERILOG_FILE control.sv
-set_global_assignment -name SYSTEMVERILOG_FILE datapath.sv
 set_global_assignment -name SYSTEMVERILOG_FILE gencc.sv
 set_global_assignment -name SYSTEMVERILOG_FILE ir.sv
-set_global_assignment -name SYSTEMVERILOG_FILE mp2.sv
 set_global_assignment -name SYSTEMVERILOG_FILE plus2.sv
 set_global_assignment -name SYSTEMVERILOG_FILE regfile.sv
 set_global_assignment -name SYSTEMVERILOG_FILE register.sv
@@ -80,5 +86,3 @@ set_global_assignment -name SYSTEMVERILOG_FILE adder.sv
 set_global_assignment -name SYSTEMVERILOG_FILE cccomp.sv
 set_global_assignment -name SYSTEMVERILOG_FILE mux4.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
-set_global_assignment -name EDA_TEST_BENCH_FILE mp2_tb.sv -section_id mp2_tb
-set_global_assignment -name EDA_TEST_BENCH_FILE physical_memory.sv -section_id mp2_tb
